<resources>
    <!-- common -->
    <string name="common_action_validate">Valider</string>
    <string name="common_action_terminate">Terminer</string>
    <string name="common_message_success">Succès</string>
    <string name="common_icon_success_description">Icône succès</string>
    <string name="common_network_error">Erreur réseau</string>
    <string name="common_image_picker_title">Sélectionner une image</string>
    <string name="common_understand">J\ai compris</string>
    <string name="common_success">Succès</string>
    <string name="common_failure">Echec</string>
    <string name="common_required">Obligatoire</string>
    <string name="common_action_call">Appel</string>
    <string name="common_action_sms">Sms</string>
    <string name="common_action_email">Mail</string>
    <string name="common_title_send_email">Envoyer un e-mail</string>
    <string name="common_title_send_sms">Envoyer un sms</string>
    <string name="common_title_make_call">Appeler</string>
    <string name="common_title_search">Rechercher</string>

    <string name="app_name" translatable="false">Maplenou</string>
    <string name="menu_title_announcement">Announces</string>
    <string name="menu_title_favorite">Favoris</string>
    <string name="menu_title_delete">Supprimer</string>
    <string name="menu_title_add">Créer</string>
    <string name="menu_title_message">Messages</string>
    <string name="menu_title_person">Compte</string>

    <!-- action -->
    <string name="action_search">Rechercher</string>
    <string name="action_logout">Déconnexion</string>

    <!-- message text -->
    <string name="message_network_error">Aucune connexion internet disponible</string>
    <string name="message_empty_list">Aucun élément disponible</string>
    <string name="message_item_deleted">Annonce supprimé</string>
    <string name="message_image_source">Source de l\'image</string>
    <string name="message_choose_photo_from_gallery">Galerie photo</string>
    <string name="message_take_photo">Prendre une photo</string>
    <string name="message_disconnection_success">Vous avez été déconnecté</string>

    <!-- account -->
    <string name="account_account_title">Compte</string>
    <string name="account_account_creation_title">Créer un compte</string>
    <string name="account_subscribe_edittext_email_hint">Adresse mail</string>
    <string name="account_subscribe_edittext_phone_number_hint">Numéro de téléphone</string>
    <string name="account_subscribe_edittext_password_hint">Mot de passe</string>
    <string name="account_subscribe_edittext_last_name_hint">Nom</string>
    <string name="account_subscribe_edittext_first_name_hint">Prénoms</string>
    <string name="account_subscribe_password_info">Au moins 8 caractères composé de chiffre, lettres majuscules et minuscules et de caractères spéciaux (@#$%^\&amp;+=)</string>
    <string name="account_subscribe_button_subscribe">S\'inscrire</string>
    <string name="account_subscribe_message_success">Votre compte a été créé avec succès</string>
    <string name="account_details_birthdate_info">Né(e) le %1$s à %2$s</string>
    <string name="account_details_account_info_label">Informations du compte</string>
    <string name="account_details_personal_info_label">Informations personelles</string>
    <string name="account_details_identity_info_label">Informations d\identités</string>
    <string name="account_details_profile_description">Image de profile</string>
    <string name="account_details_email_label">Email: &#032;</string>
    <string name="account_details_phone_label">Numéro de téléphone: &#032;</string>
    <string name="account_details_password_label">Mot de passe</string>
    <string name="account_details_last_login_label">Dernière connexion: &#032;</string>
    <string name="account_details_certification_label">Compte certifé: &#032;</string>
    <string name="account_details_status_label">Statut: &#032;</string>
    <string name="account_details_card_type_label">Type de document: &#032;</string>
    <string name="account_details_card_number_label">N° de document: &#032;</string>
    <string name="account_details_card_issue_date_label">Date d\'émission: &#032;</string>
    <string name="account_details_card_expiration_date_label">Date d\expiration: &#032;</string>
    <string name="account_details_card_issuing_office_label">Par: &#032;</string>
    <string name="account_details_card_nationality_label">Nationalité: &#032;</string>

    <!-- label text -->
    <string name="announcement_label_announcement_title" translatable="false">Title</string>
    <string name="announcement_label_announcement_price" translatable="false">1000 F CFA</string>
    <string name="announcement_label_announcement_category" translatable="false">Decoration</string>
    <string name="announcement_label_announcement_city" translatable="false">Lomé</string>
    <string name="announcement_label_announcement_creation_date" translatable="false">02/04/2019 à 23:45</string>
    <string name="announcement_label_announcement_description" translatable="false">Description</string>
    <string name="announcement_label_announcement_user" translatable="false">Kwami K.</string>
    <string name="announcement_details_announcer_label" translatable="true">Annonceur</string>
    <string name="announcement_details_location_label" translatable="true">Localisation</string>

    <!-- announcement -->
    <string name="announcement_announcement_creation_title">Ajouter une annonce</string>
    <string name="announcement_announcement_list_title">Announces</string>
    <string name="announcement_creation_category_label">Catégorie</string>
    <string name="announcement_creation_title_label">Titre</string>
    <string name="announcement_creation_price_label">Prix</string>
    <string name="announcement_creation_description_label">Description</string>
    <string name="announcement_creation_city_label">Ville</string>
    <string name="announcement_creation_localization_label">Localisation</string>
    <string name="announcement_creation_success_description">Votre annonce a été créé avec succès</string>
    <string name="announcement_creation_city_required">Vous devez sélectionner une ville</string>
    <string name="announcement_creation_category_required">Vous devez sélectionner une catégorie</string>
    <string name="announcement_search_title">Rechercher</string>

    <!-- announcement details -->
    <string name="announcement_details_message_announcement_unsaved">Supprimé comme favoris</string>
    <string name="announcement_details_message_announcement_saved">Ajouté comme favoris</string>

    <!-- favorite announcement -->
    <string name="announcement_favorite_announcement_list_title">Favoris</string>

    <!-- category -->
    <string name="category_list_title">Catégories</string>
    <string name="category_choose_category_title">Choisir une catégorie</string>

    <!-- city -->
    <string name="city_list_title">Villes</string>
    <string name="city_choose_city_title">Choisir une ville</string>

    <!-- image view content description text -->
    <string name="content_description_list_item_announcement_thumbnail">Image de l\'annonce</string>
    <string name="content_description_list_item_announcement_images">Les image de l\'annonce</string>
    <string name="content_description_last_favorite_images">Une image du dernier annonce ajouté comme favoris</string>
    <string name="content_description_add_images">Ajouter des images à votre annonce</string>
    <string name="content_description_added_image">Photo ajoutée à votre annonce</string>

    <!-- http errors-->
    <string name="http_error_505_message">Erreur inconnu</string>

    <!-- login -->
    <string name="login_login_title">Se connecter</string>
    <string name="login_button_login_title">Connexion</string>
    <string name="login_edittext_email_hint">Adresse email</string>
    <string name="login_edittext_password_hint">Mot de passe</string>
    <string name="login_message_create_account_title">Pas de compte? <b>S\'inscrire</b></string>
    <string name="login_message_password_forgotten_title">Mot de passe oublié?</string>

    <!-- message -->
    <string name="message_message_title">Messages</string>

    <!-- currency -->
    <string name="large_text" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum. \n

        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum. \n

        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>

    <!-- permissions -->
    <string name="permission_camera_explanation_message">
        Maplenou a besoin d\accéder à votre camera pour prendre une photo.\nSi vous êtes d\'accord cliquez sur autoriser sur le prochain écran.
    </string>
    <string name="permission_gallery_explanation_message">
        Maplenou a besoin d\'accéder à votre gallerie photo pour sélectionner une photo.\nSi vous êtes d\'accord cliquez sur autoriser sur le prochain écran.
    </string>
    <string name="permission_write_storage_explanation_message">
        Maplenou a besoin d\'accéder à votre disque local pour enrégistrer les photos.\nSi vous êtes d\'accord cliquez sur autoriser sur le prochain écran.
    </string>
    <string name="permission_message_granted">Permission accordée</string>
    <string name="permission_message_refused">Permission refusée</string>

</resources>
