<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_announcement"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_title_announcement" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/menu_title_favorite" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/menu_title_add" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/menu_title_message" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_title_person" />

</menu>
