<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="announcement"
            type="com.wolasoft.maplenou.data.entities.Announcement"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacer4"
        android:background="@drawable/list_item_border_line">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/list_item_announcement_width"
            android:layout_height="@dimen/list_item_announcement_height"
            android:contentDescription="@string/content_description_list_item_announcement_thumbnail"
            app:localImageUrl="@{announcement.photos}"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="@dimen/spacer4"
            android:layout_marginEnd="@dimen/spacer4"
            tools:src="@drawable/ic_photo_camera_black_24dp"/>

        <TextView
            android:id="@+id/title"
            style="@style/ListItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacer4"
            android:layout_marginLeft="@dimen/spacer4"
            android:text="@{announcement.title}"
            app:layout_constraintStart_toEndOf="@id/thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Livre de poche Chapsal Le charme des liaisons" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemPrice"
            app:amount="@{announcement.price}"
            tools:text="@string/announcement_label_announcement_price"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemCategory"
            android:text="@{announcement.category.name}"
            tools:text="@string/announcement_label_announcement_category"
            app:layout_constraintTop_toBottomOf="@id/price"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemLocation"
            android:text="@{announcement.city.name}"
            tools:text="@string/announcement_label_announcement_city"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/creationDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemDate"
            app:date="@{announcement.creationDate}"
            tools:text="@string/announcement_label_announcement_creation_date"
            app:layout_constraintTop_toBottomOf="@id/city"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
