<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wolasoft.maplenou.views.announcement.details.AnnouncementDetailsFragment">
    <data>
        <variable
            name="announcement"
            type="com.wolasoft.maplenou.data.entities.Announcement"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <include
            android:id="@+id/appBarContent"
            layout="@layout/transparent_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contentHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacer4">

                <com.synnapps.carouselview.CarouselView
                    android:id="@+id/images"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/announcement_details_image_height"
                    android:contentDescription="@string/content_description_list_item_announcement_images"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_photo_camera_black_24dp" />

                <TextView
                    android:id="@+id/title"
                    style="@style/DetailsItemTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/announcement_details_padding"
                    android:layout_marginLeft="@dimen/announcement_details_padding"
                    android:layout_marginTop="@dimen/spacer4"
                    android:layout_marginEnd="@dimen/announcement_details_padding"
                    android:layout_marginRight="@dimen/announcement_details_padding"
                    android:layout_marginBottom="@dimen/spacer4"
                    android:text="@{announcement.title}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/images"
                    tools:text="@string/announcement_label_announcement_title" />

                <TextView
                    android:id="@+id/price"
                    style="@style/DetailsItemPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:amount="@{announcement.price}"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:layout_constraintLeft_toLeftOf="@id/title"
                    app:layout_constraintRight_toRightOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:text="@string/announcement_label_announcement_price" />

                <TextView
                    android:id="@+id/creationDate"
                    style="@style/DetailsItemDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacer4"
                    app:layout_constraintLeft_toLeftOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    tools:text="@string/announcement_label_announcement_creation_date" />

                <TextView
                    android:id="@+id/user"
                    style="@style/DetailsItemDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="@id/creationDate"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:layout_constraintRight_toRightOf="@id/title"
                    app:layout_constraintTop_toTopOf="@id/creationDate"
                    tools:text="@string/announcement_label_announcement_user" />

                <LinearLayout
                    android:id="@+id/contactLayout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacer2"
                    android:layout_marginTop="@dimen/spacer4"
                    android:gravity="center"
                    app:layout_constraintLeft_toLeftOf="@id/creationDate"
                    app:layout_constraintStart_toStartOf="@id/creationDate"
                    app:layout_constraintTop_toBottomOf="@id/creationDate">

                    <TextView
                        android:id="@+id/phoneTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/body1.main"
                        android:text="@string/common_action_call"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:drawableTint="@color/colorPrimary"
                        android:drawableTop="@drawable/ic_phone_24dp"/>

                    <TextView
                        android:id="@+id/smsTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/body1.main"
                        android:text="@string/common_action_sms"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:drawableTint="@color/colorPrimary"
                        android:drawableTop="@drawable/ic_sms_24dp"/>

                    <TextView
                        android:id="@+id/emailTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_action_email"
                        style="@style/body1.main"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:drawableTint="@color/colorPrimary"
                        android:drawableTop="@drawable/ic_email_24dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/descriptionLabel"
                    style="@style/DetailsItemDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer4"
                    android:text="@string/announcement_label_announcement_description"
                    app:layout_constraintLeft_toLeftOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/contactLayout"
                    tools:text="@string/announcement_label_announcement_description" />

                <TextView
                    android:id="@+id/description"
                    style="@style/DetailsItemDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer2"
                    android:text="@{announcement.description}"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:layout_constraintLeft_toLeftOf="@id/title"
                    app:layout_constraintRight_toRightOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
                    tools:text="@string/large_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <include
            android:id="@+id/deletedItemHolder"
            layout="@layout/deleted_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/ProgressBar"
            android:layout_gravity="center"
            android:visibility="visible"
            tools:visibility="visible" />

    </FrameLayout>

</layout>
