<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wolasoft.maplenou.views.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/spacer4"
            android:paddingTop="@dimen/spacer16">

            <EditText
                android:id="@+id/emailEdit"
                style="@style/EditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacer12"
                android:layout_marginTop="@dimen/spacer6"
                android:hint="@string/login_edittext_email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordEdit"
                style="@style/EditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacer12"
                android:layout_marginTop="@dimen/spacer2"
                android:hint="@string/login_edittext_password_hint"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEdit"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@drawable/password_toggle_color" />

            <TextView
                android:id="@+id/passwordForgottenTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer2"
                android:gravity="start"
                android:text="@string/login_message_password_forgotten_title"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordEdit" />

            <Button
                android:id="@+id/loginButton"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer6"
                android:text="@string/login_button_login_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordForgottenTV" />

            <TextView
                android:id="@+id/createAccountTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer12"
                android:gravity="center"
                android:text="@string/login_message_create_account_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible"/>
    </FrameLayout>

</layout>
